--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <meta name="description" content="Marjaana Tienaho´s Portfolio">
     <meta name="keywords" content="Portfolio, Frontend, Developer ">
     <meta name="author" content="Marjaana Tienaho">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,700&display=swap" rel="stylesheet">
+    <link rel="preload" href="https://fonts.googleapis.com/css?family=Montserrat:300,700&display=swap" as="style"
+    onload="this.onload=null;this.rel='stylesheet'">
+    <link rel="preload" href="https://fonts.googleapis.com/css?family=Roboto:300,700&display=swap" as="style"
+    onload="this.onload=null;this.rel='stylesheet'">
     <link rel="icon" href="./assets/favicon.ico" type="image/x-icon">
 </head>
 
