Updated web styling issues

--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
             <p>Hi! I’m a creative senior scrum master and a curios junior frontend developer that thrives to work in
                 teams and loves to learn new things.
                 I’m all about creating cutomer value and quality products for people to love and loves the cha
-                problemsolving.&#10024 &#10024</p>
+                problemsolving.&#10024; &#10024;</p>
+        </div>
     </section>
 
     <section class="tech-section">
@@ -54,7 +55,6 @@
         <div class="tech-description">
             <p>HTML, CSS, Flexbox,<span class="bold"> JavaScript</span>, ES6, Node.js, Web
                 Accessibly, API:s,<span class="bold"> mob-programming</span>, pair-programming, Github.</p>
-        </div>
         </div>
     </section>
     <section class="featured-section">
@@ -159,14 +159,13 @@
         <div class="more-thoughts-description">
             <article class="more-thoughts-article">
                 <a href="https://www.linkedin.com/in/marjaana-tienaho-0576b915/" aria-label="Lorem ipsum" rel="noreferrer">
-                <p><span class="bold-white">SEP 2020</span></p>
+                <p><span class="bold-white">SEP 2020</span>
                 lorem ipsum .......................
                 </p>
                 </a>
 
             </article>
         </div>
-    </section>
     </section>
     <section class="skills-section">
 
@@ -198,7 +197,7 @@
             </div>
 
             <div class="upcoming">
-                <h3><span class="bold-not-underlined">UPCOMING</h3></span>
+                <h3><span class="bold-not-underlined">UPCOMING</span></h3>
                 <div>React</div>
                 <div>Redux</div>
                 <div>Node.js</div>
@@ -206,8 +205,6 @@
                 <div>SASS</div>
             </div>
         </div>
-    </section>
-    </div>
     </section>
     <footer>
         <section class="contact-section">
