--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
     <header>
         <div class="sociallinks-container">
             <a class="sociallink-icon" href="https://www.linkedin.com/in/marjaana-tienaho-0576b915/" tabindex="0"
-                aria-label="Linkedin profile link" rel="noreferrer">
+                aria-label="Linkedin profile" rel="noreferrer">
                 <div class="icon-linkedin"></div>
             </a>
             <a class="sociallink-icon" href="https://github.com/MayaBlixt" tabindex="0"
-                aria-label="Github profile link" rel="noreferrer">
+                aria-label="Github profile" rel="noreferrer">
                 <div class="icon-github"></div>
             </a>
             <a class="sociallink-icon" href="https://stackoverflow.com/c/technigo/users/118" tabindex="0"
-                aria-label="Stackoverflow profile link" rel="noreferrer">
+                aria-label="Stackoverflow profile" rel="noreferrer">
                 <div class="icon-stackoverflow"></div>
             </a>
         </div>
