Updated web styling issues

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <img class="project-img" src="./assets/Weather_app.jpg" alt="Weather app">
                     <p><span class="bold-not-underlined">WEATHER APP.</span>Web app build in Javascript using open
                         weather API
-                        <span class="bold-white">>></span></p>
+                        <span class="bold-not-underlined">>></span></p>
                 </a>
                 <div class="project-tech">
                     <div>HTML</div>
@@ -81,7 +81,7 @@
                     <img class="project-img" src="./assets/Graffiti_bootcamp.jpg" alt="Graffiti bootcamp">
                     <p><span class="bold-not-underlined">GRAFFITI BOOTCAMP.</span> Mobile first responsive business site
                         with a
-                        hero video.<span class="bold-white">>></span></p>
+                        hero video.<span class="bold-not-underlined">>></span></p>
                 </a>
                 <div class="project-tech">
                     <div>HTML</div>
@@ -99,7 +99,7 @@
                 <a href="https://mysterycluedo.netlify.app/" aria-label="Cluedo" rel="noreferrer">
                     <p><span class="bold-not-underlined">CLUEDO.</span> A piece of the classic board game build in
                         Javascript and updating the DOM.
-                        <span class="bold-white">>></span></p>
+                        <span class="bold-not-underlined">>></span></p>
                 </a>
                 <div class="project-tech">
                     <div>HTML</div>
@@ -113,7 +113,7 @@
                 <a href="https://enjoypizza.netlify.app/" aria-label="Pizza bot" rel="noreferrer">
                     <p><span class="bold-not-underlined">PIZZA BOT.</span> Responsive desktopfirst text-based pizza
                         chatbot using Javascript.
-                        <span class="bold-white">>></span></p>
+                        <span class="bold-not-underlined">>></span></p>
                 </a>
                 <div class="project-tech">
                     <div>HTML</div>
@@ -126,7 +126,7 @@
                 <a href="https://vibrant-pare-d19413.netlify.app/" aria-label="Corona news site" rel="noreferrer">
                     <p><span class="bold-not-underlined">CORONA NEWS SITE.</span> Responsive desktopfirst news site
                         using flexbox and media queries.
-                        <span class="bold-white">>></span></p>
+                        <span class="bold-not-underlined">>></span></p>
                 </a>
                 <div class="project-tech">
                     <div>HTML</div>
@@ -149,7 +149,7 @@
                     <p><span class="bold-not-underlined">What a day!</span></p>
                     <div class="blog-article">
                         <p>Today was my first day attending the Front end development bootcamp at Technigo,
-                            it was jam packed with awesomeness and excitement.<span class="bold-white"> >></span>
+                            it was jam packed with awesomeness and excitement.<span class="bold-not-underlined"> >></span>
                         </p>
                     </div>
                 </a>
@@ -159,7 +159,7 @@
         <div class="more-thoughts-description">
             <article class="more-thoughts-article">
                 <a href="https://www.linkedin.com/in/marjaana-tienaho-0576b915/" aria-label="Lorem ipsum" rel="noreferrer">
-                <p><span class="bold-white">SEP 2020</span>
+                <p><span class="bold-not-underlined">SEP 2020</span>
                 lorem ipsum .......................
                 </p>
                 </a>
