Updated compressed images

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <h2 class="portfolio-title"> frontend developer</h2>
             <h3 class="portfolio-subtitle"> + scrum master</h3>
         </div>
-        <img class="profile-img" src="./assets/Marjaana.jpg" alt="Picture of Marjaana Tienaho">
+        <img class="profile-img" src="./assets/Maya.png" alt="Picture of Marjaana Tienaho">
     </header>
     <section class="summary-section">
         <div class="summary-description">
