Updated styling of page and readme file

--- a/index.html
+++ b/index.html
@@ -9,22 +9,25 @@
     <meta name="description" content="Marjaana Tienaho´s Portfolio">
     <meta name="keywords" content="Portfolio, Frontend, Developer ">
     <meta name="author" content="Marjaana Tienaho">
+    <!-- Added preload for google fonts to enhanche speed-->
     <link rel="preload" href="https://fonts.googleapis.com/css?family=Montserrat:300,700&display=swap" as="style"
-    onload="this.onload=null;this.rel='stylesheet'">
+        onload="this.onload=null;this.rel='stylesheet'">
     <link rel="preload" href="https://fonts.googleapis.com/css?family=Roboto:300,700&display=swap" as="style"
-    onload="this.onload=null;this.rel='stylesheet'">
+        onload="this.onload=null;this.rel='stylesheet'">
+    <!-- Added Favicon-->
     <link rel="icon" href="./assets/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
     <header>
+        <!-- Social links-->
         <div class="sociallinks-container">
             <a class="sociallink-icon" href="https://www.linkedin.com/in/marjaana-tienaho-0576b915/" tabindex="0"
                 aria-label="Linkedin profile" rel="noreferrer">
                 <div class="icon-linkedin"></div>
             </a>
-            <a class="sociallink-icon" href="https://github.com/MayaBlixt" tabindex="0"
-                aria-label="Github profile" rel="noreferrer">
+            <a class="sociallink-icon" href="https://github.com/MayaBlixt" tabindex="0" aria-label="Github profile"
+                rel="noreferrer">
                 <div class="icon-github"></div>
             </a>
             <a class="sociallink-icon" href="https://stackoverflow.com/c/technigo/users/118" tabindex="0"
@@ -32,7 +35,7 @@
                 <div class="icon-stackoverflow"></div>
             </a>
         </div>
-
+        <!-- Portfolio section-->
         <div class="portfolio-container">
             <h1 class="portfolio-name"> PORTFOLIO: <span class="bold-name">MARJAANA TIENAHO</span></h1>
             <h2 class="portfolio-title"> frontend developer</h2>
@@ -42,14 +45,16 @@
     </header>
     <section class="summary-section">
         <div class="summary-description">
-            <div class="summary-symbol"><div class="line"></div><div class="circle"></div></div>
+            <div class="summary-symbol">
+                <div class="line"></div>
+                <div class="circle"></div>
+            </div>
             <p>Hi! I’m a creative senior scrum master and a curios junior frontend developer that thrives to work in
                 teams and loves to learn new things.
-                I’m all about creating cutomer value and quality products for people to love and loves the cha
-                problemsolving.&#10024; &#10024;</p>
+                I’m all about creating quality products and cutomer value. &#10024; &#10024;</p>
         </div>
     </section>
-
+    <!-- Tech section-->
     <section class="tech-section">
         <h2 class="section-heading">tech</h2>
         <div class="tech-description">
@@ -57,6 +62,7 @@
                 Accessibly, API:s,<span class="bold"> mob-programming</span>, pair-programming, Github.</p>
         </div>
     </section>
+    <!-- Featured projects section-->
     <section class="featured-section">
         <h2 class="section-heading">featured projects</h2>
         <div class="feature-description">
@@ -137,31 +143,38 @@
             </article>
         </div>
     </section>
+    <!-- Thoughts section-->
     <section class="thoughts-section">
         <h2 class="section-heading">MY THOUGHTS</h2>
         <div class="thoughts-description">
             <article class="blog-post-card">
-                <a href="https://www.linkedin.com/in/marjaana-tienaho-0576b915/" target="_blank" aria-label="Lorem ipsum" rel="noreferrer">
+                <a href="https://www.linkedin.com/in/marjaana-tienaho-0576b915/" target="_blank"
+                    aria-label="Lorem ipsum" rel="noreferrer">
                     <div class="blog-post">
                         <img class="thoughts-img" src="./assets/desk_small.png" alt="desk" />
                         <p><span class="bold-red">OCT 2020</span></p>
                     </div>
                     <p><span class="bold-not-underlined">Lorem ipsum</span></p>
                     <div class="blog-article">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est adipisci quibusdam aliquid saepe eligendi rem dolore laudantium ipsum beatae? Officia, officiis exercitationem est autem id perspiciatis molestias debitis corporis cum?.<span class="bold-red"> >></span>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est adipisci quibusdam aliquid saepe
+                            eligendi rem dolore laudantium ipsum beatae? Officia, officiis exercitationem est autem id
+                            perspiciatis molestias debitis corporis cum?.<span class="bold-red"> >></span>
                         </p>
                     </div>
                 </a>
             </article>
             <article class="blog-post-card">
-                <a href="https://www.linkedin.com/in/marjaana-tienaho-0576b915/" target="_blank" aria-label="Lorem ipsum" rel="noreferrer">
+                <a href="https://www.linkedin.com/in/marjaana-tienaho-0576b915/" target="_blank"
+                    aria-label="Lorem ipsum" rel="noreferrer">
                     <div class="blog-post">
                         <img class="thoughts-img" src="./assets/desk_small.png" alt="desk" />
                         <p><span class="bold-red">OCT 2020</span></p>
                     </div>
                     <p><span class="bold-not-underlined">Lorem ipsum!</span></p>
                     <div class="blog-article">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab sed quos porro eius temporibus, iusto esse distinctio adipisci quae odit sequi molestias saepe autem aliquam. Ea, dolorum libero? Aliquid, magnam!<span class="bold-red"> >></span>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab sed quos porro eius temporibus,
+                            iusto esse distinctio adipisci quae odit sequi molestias saepe autem aliquam. Ea, dolorum
+                            libero? Aliquid, magnam!<span class="bold-red"> >></span>
                         </p>
                     </div>
                 </a>
@@ -170,33 +183,39 @@
         <h2 class="section-heading">MORE THOUGHTS</h2>
         <div class="more-thoughts-description">
             <article class="more-thoughts-article">
-                <a href="https://www.linkedin.com/in/marjaana-tienaho-0576b915/" aria-label="Lorem ipsum" rel="noreferrer">
+                <a href="https://www.linkedin.com/in/marjaana-tienaho-0576b915/" aria-label="Lorem ipsum"
+                    rel="noreferrer">
                     <p><span class="bold-red">SEP 2020.</span>
-                        <span class="bold-not-underlined">Lorem ipsum dolor sit amet consectetur adipisicing elit.</span> <span class="bold-red"> >></span>
+                        <span class="bold-not-underlined">Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit.</span> <span class="bold-red"> >></span>
                     </p>
                 </a>
 
             </article>
             <article class="more-thoughts-article">
-                <a href="https://www.linkedin.com/in/marjaana-tienaho-0576b915/" aria-label="Lorem ipsum" rel="noreferrer">
+                <a href="https://www.linkedin.com/in/marjaana-tienaho-0576b915/" aria-label="Lorem ipsum"
+                    rel="noreferrer">
                     <p><span class="bold-red">SEP 2020.</span>
-                        <span class="bold-not-underlined">Lorem ipsum dolor sit amet consectetur adipisicing elit.</span> <span class="bold-red"> >></span>
+                        <span class="bold-not-underlined">Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit.</span> <span class="bold-red"> >></span>
                     </p>
                 </a>
 
             </article>
             <article class="more-thoughts-article">
-                <a href="https://www.linkedin.com/in/marjaana-tienaho-0576b915/" aria-label="Lorem ipsum" rel="noreferrer">
-                <p><span class="bold-red">SEP 2020.</span>
-                    <span class="bold-not-underlined">Lorem ipsum dolor sit amet consectetur adipisicing elit.</span> <span class="bold-red"> >></span>
-                </p>
+                <a href="https://www.linkedin.com/in/marjaana-tienaho-0576b915/" aria-label="Lorem ipsum"
+                    rel="noreferrer">
+                    <p><span class="bold-red">SEP 2020.</span>
+                        <span class="bold-not-underlined">Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit.</span> <span class="bold-red"> >></span>
+                    </p>
                 </a>
 
             </article>
         </div>
     </section>
+    <!-- Skills section-->
     <section class="skills-section">
-
         <h2 class="section-heading">skills</h2>
         <div class="skills-description">
             <div class="code">
@@ -234,6 +253,7 @@
             </div>
         </div>
     </section>
+    <!-- Contact section-->
     <footer>
         <section class="contact-section">
             <h2 class="section-heading">Contact</h2>
